styles.css
body {
    margin-left: 100px;
    margin-right: 100px;
    font-family: sans-serif;
}

.header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 25px;
    background-color: blue;
}

.nav-bar {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.subheader {
    display: flex;
    justify-content: space-between;
    padding: 25px;
    gap: 25px;
}

.desc {
    width: 200vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.desc-1 {
    font-size: x-large;
    font-weight: 900;
}

button {
    width: 100px;
    height: 20px;
    cursor: pointer;
}

